# arkalia-cia

./: .codecov.yml  .cursorignore  .cursorrules  .gitattributes  .gitignore  .last_build_id  .pre-commit-config.yaml  :memory:  AUDIT_AUTHENTIFICATION_SIMPLIFICATION.md  AUDIT_IOS_GRATUIT.md  DOCUMENTATION_STATUS.md  ETAPES_IPAD.md  INSTALLER_XCODE_MAC.md  INSTALL_IPHONE.md  Makefile  PHASE1_COMPLETED.md  PRIVACY_POLICY.txt  README.md  SECURITY.md  TERMS_OF_SERVICE.txt  TESTS_DOUBLONS_SOLUTION.md  bandit_report.json  clean_macos_files.sh  cleanup_all.sh  cleanup_memory.sh  conftest.py  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  privacy-policy.html  pyproject.toml  pyrightconfig.json  pytest.ini  quality_report.json  requirements.txt  run_tests.sh  setup.py  simple_test.html  (+7 more)
.github/: BRANCH_PROTECTION.md  SECRETS_MANAGEMENT.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-matrix.yml  codeql-analysis.yml  deploy-play-store.yml  flutter-ci.yml  security-scan.yml
arkalia_cia/: .gitattributes  .gitignore_update_script  README.md  check_updates.sh  fix_android_namespace.sh  pubspec.yaml  update_all_devices.sh  update_s25.sh
arkalia_cia/android/: .gradleignore  build-android.sh  build.gradle.kts  clean-gradle.sh  disable-macos-files.sh  find-all-macos-files.sh  generate_keystore.sh  gradle.properties  init.gradle  key.properties.template  local.properties  prepare_github_secrets.sh  prevent-macos-files.sh  settings.gradle.kts  setup-global-init.sh  setup_key_properties.sh  watch-macos-files.sh
arkalia_cia/assets/: .gitkeep
arkalia_cia/ios/: Podfile
arkalia_cia/lib/: main.dart
arkalia_cia/scripts/: README_SCRIPTS.md  build-app-bundle.sh  build-release-clean.sh  check_google_signin.sh  ci-phase1-configure-flutter-source.sh  ci-phase2-clean-macos-files.sh  ci-phase3-build-apk.sh  copier_sha1_google_cloud.sh  dev-web-fast.sh  diagnostic_google_complet.sh  get_sha1.sh  open_comet_devtools.applescript  run-all-platforms.sh  run-android.sh  run-macos.sh  run-web.sh  test-google-signin.sh  update-all-from-develop.sh  update_csp_for_production.sh  verifier_google_cloud.sh  verifier_sha1_telephone.sh
arkalia_cia/test/: widget_test.dart
arkalia_cia/web/: index.html  sw.js
arkalia_cia_python_backend/: api.py  app_types.py  auth.py  auto_documenter.py  config.py  database.py  dependencies.py  exceptions.py  pdf_processor.py  security_dashboard.py  security_utils.py  storage.py
arkalia_cia_python_backend/ai/: aria_integration.py  conversational_ai.py  pattern_analyzer.py
arkalia_cia_python_backend/aria_integration/: __init__.py  api.py
arkalia_cia_python_backend/middleware/: __init__.py  request_size_validator.py
arkalia_cia_python_backend/pdf_parser/: __init__.py  metadata_extractor.py  ocr_integration.py  ocr_processor.py
arkalia_cia_python_backend/security/: ssrf_validator.py
arkalia_cia_python_backend/services/: document_service.py  health_portal_parsers.py  medical_report_service.py
arkalia_cia_python_backend/tests/: generate_test_pdfs.py  test_parser.py
arkalia_cia_python_backend/utils/: filename_validator.py  retry.py
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
dashboard/security/: security_dashboard.html
docs/: AMELIORATIONS_FINALES.md  AMELIORATIONS_FINALES_100_POURCENT.md  AMELIORATIONS_UX_COMPLETEES.md  ANALYSE_COMPLETE_BESOINS_MERE.md  ANALYSE_EXPLOITATION_PROJET.md  ANALYSE_PERFORMANCE_TESTS.md  API.md  API_DOCUMENTATION.md  APPROUVER_CERTIFICAT_DEVELOPPEUR.md  APP_INDEPENDANTE_MAC.md  ARCHITECTURE.md  ARCHITECTURE_SERVICES.md  ARIA_IMPLEMENTATION_GUIDE.md  ARIA_INTEGRATION.md  ARKALIA_ARIA_PROJECT.md  ARKALIA_ARIA_SUMMARY.md  AUDIT_ARKALIA_METRICS_COLLECTOR.md  AUDIT_COMPLET_18_NOVEMBRE_2025.md  AUDIT_COMPLET_19_NOVEMBRE_2025.md  AUDIT_COMPLET_26_NOVEMBRE.md  AUDIT_COMPLET_MANQUANTS.md  AUDIT_ET_OPTIMISATIONS.md  AUDIT_EXPLOITATION_100.md  AUDIT_FINAL_COMPLET.md  AUDIT_POST_CORRECTIONS.md  AUDIT_PROBLEMES_SIMILAIRES.md  AUDIT_SECURITE_SENIOR.md  AUDIT_VERIFICATION_COMPLETE.md  BESOINS_MERE_23_NOVEMBRE_2025.md  BRANCHE_UNIQUE_DEVELOP.md  BUILD_RELEASE_ANDROID.md  CERTIFICATION_QUALITE_10_SUR_10.md  CE_QUE_VOUS_DEVRIEZ_VOIR.md  CE_QUI_MANQUE_10_DECEMBRE_2025.md  CE_QUI_RESTE_A_FAIRE.md  CE_QUI_RESTE_A_FAIRE_CIA_12_DECEMBRE_2025.md  CE_QUI_RESTE_VRAIMENT_A_FAIRE_CONSOLIDE.md  CHANGELOG.md  CHANGELOG_20_NOVEMBRE_2025.md  CHANGELOG_AUTHENTIFICATION.md  (+138 more)
docs/analysis/: AMELIORATIONS_APPLIQUEES.md  ANALYSE_COMPLETE_BESOINS_MERE.md  BESOINS_MERE_23_NOVEMBRE_2025.md  IMPORTS_ANALYSIS.md  RAPPORT_ANALYSE_PROJET.md  USE_CASES.md
docs/audits/: AMELIORATIONS_26_NOVEMBRE.md  ANALYSES_CONSOLIDEES.md  ANALYSE_BIOMETRIE.md  ANALYSE_EXPLOITATION_PROJET.md  ANALYSE_PERFORMANCE_TESTS.md  AUDITS_CONSOLIDES.md  AUDIT_COMPLET_12_DECEMBRE_2025.md  AUDIT_COMPLET_19_NOVEMBRE_2025.md  AUDIT_COMPLET_27_NOVEMBRE_2025.md  AUDIT_COMPLET_PROJET_2025.md  AUDIT_CONSOMMATION_RAM.md  AUDIT_DEPENDANCES_GRATUITES_12_DECEMBRE_2025.md  AUDIT_ET_OPTIMISATIONS.md  AUDIT_FINAL_26_NOVEMBRE_2025.md  AUDIT_POST_CORRECTIONS.md  AUDIT_QUALITE_CODE_12_DECEMBRE_2025.md  AUDIT_RESTE_A_FAIRE_12_DECEMBRE_2025.md  AUDIT_SECURITE_PERFECTION_DECEMBRE_2025.md  AUDIT_SEVERE_SENIOR.md  AUDIT_STRUCTURE_DECEMBRE_2025.md  AUDIT_ULTRA_SEVERE_SENIOR.md  AUDIT_UTILISATEUR_15_JANVIER_2026.md  (+15 more)
lib/: common_functions.sh
scripts/: FINALISER_IOS.sh  check_accessibility.sh  check_button_sizes.sh  check_error_helper.sh  check_lint.sh  clean_flutter_cache.sh  clean_macos_files.sh  clean_xcode_build.sh  cleanup_all.sh  cleanup_documentation.sh  cleanup_memory.sh  common_functions.sh  deploy_pwa_github_pages.sh  ensure_web_build.sh  fix_ios_build.sh  fix_mac_performance.sh  fix_ram_overheat.sh  prevent_macos_files_pods.sh  reset_onboarding.sh  restart_cursor.sh  run_tests.sh  start_backend.sh  start_backend_safe.sh  start_flutter.sh  start_flutter_safe.sh  start_flutter_web.sh  test_ci_fixes.sh  verifier_ios_app.sh  verify_release_readiness.py
tests/: __init__.py  conftest.py  test_database.py  test_pdf_processor.py
(+359 files in other folders)
