[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkalia-cia"
version = "1.1.0"
description = "Arkalia CIA - Assistant Mobile Santé"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Arkalia Luna System", email = "arkalia.luna.system@gmail.com"}
]
keywords = ["health", "mobile", "flutter", "python", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/arkalia-luna-system/arkalia-cia"
Repository = "https://github.com/arkalia-luna-system/arkalia-cia.git"
Issues = "https://github.com/arkalia-luna-system/arkalia-cia/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arkalia_cia_python_backend*"]
exclude = ["tests*", "arkalia_cia", "docs*", "arkalia_cia_venv*", "build*", "dist*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | arkalia_cia_venv
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "build/*",
    "dist/*",
    "arkalia_cia_venv/*",
    "*.egg-info/*"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
namespace_packages = true
exclude = [
    "build/",
    "dist/",
    "arkalia_cia_venv/",
    "tests/",
    "setup.py",
]

[[tool.mypy.overrides]]
module = "arkalia_cia_python_backend.*"
ignore_errors = false
